Confirm and cancel identifiers to search modal buttons

--- a/src/components/advancedSearchModal.html
+++ b/src/components/advancedSearchModal.html
@@ -29,6 +29,6 @@
   </modal-body>
 
   <modal-buttons>
-    <button type="button" class="btn btn-default" ng-click="ctrl.close()" translate>Cancel</button>
+    <button type="button" class="btn btn-default cancel" ng-click="ctrl.close()" translate>Cancel</button>
   </modal-buttons>
 </modal-template>
