--- a/src/components/model/searchNamespaceModal.html
+++ b/src/components/model/searchNamespaceModal.html
@@ -41,6 +41,6 @@
   </modal-body>
 
   <modal-buttons>
-    <button type="button" class="btn btn-default" ng-click="ctrl.close()" translate>Cancel</button>
+    <button type="button" class="btn btn-default cancel" ng-click="ctrl.close()" translate>Cancel</button>
   </modal-buttons>
 </modal-template>
