Explicit table remove implementation
Fixes bug where logic from Model remove collection was not triggered.

--- a/src/components/editor/editableReferenceDataSelect.html
+++ b/src/components/editor/editableReferenceDataSelect.html
@@ -5,7 +5,7 @@
   </div>
 
   <div ng-if="ctrl.referenceData.length > 0" class="model-view__sub row">
-    <editable-table descriptor="ctrl.descriptor" values="ctrl.referenceData" expanded="ctrl.expanded"></editable-table>
+    <editable-table descriptor="ctrl.descriptor" expanded="ctrl.expanded"></editable-table>
   </div>
 
   <div ng-class="{'model-view__sub': !!ctrl.referenceData}" style="margin-bottom: 15px">
