Tag buttons for easier identification

--- a/src/components/model/addEditLinkModal.html
+++ b/src/components/model/addEditLinkModal.html
@@ -17,8 +17,8 @@
     </modal-body>
 
     <modal-buttons>
-      <button class="btn btn-default" type="button" ng-click="ctrl.cancel()" translate>Cancel</button>
-      <button class="btn btn-default" type="button" ng-click="ctrl.create()" ng-disabled="!addModelForm.$valid">{{ctrl.confirmLabel | translate}}</button>
+      <button class="btn btn-default cancel" type="button" ng-click="ctrl.cancel()" translate>Cancel</button>
+      <button class="btn btn-default confirm" type="button" ng-click="ctrl.create()" ng-disabled="!addModelForm.$valid">{{ctrl.confirmLabel | translate}}</button>
     </modal-buttons>
   </modal-template>
 </form>
