--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -114,7 +114,7 @@
       <button type="button"
               class="btn btn-default confirm"
               ng-click="ctrl.confirm()"
-              ng-disabled="!ctrl.selection || ctrl.cannotConfirm || form.$invalid || form.$pending || ctrl.isExternalPredicatePending()">
+              ng-disabled="!ctrl.selection || ctrl.cannotConfirm || (form.editing && (form.$invalid || form.$pending)) || ctrl.isExternalPredicatePending()">
         {{(ctrl.selection.unsaved ? ('Create and use ' + ctrl.selection.type)
                                   : (!ctrl.typeSelectable ? 'Use ' + ctrl.type : 'Use selection')) | translate}}
       </button>
