Refactor subject/concept components

--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -34,12 +34,7 @@
   </div>
 </div>
 
-<div class="row">
-
-  <div class="col-md-12">
-    <editable-subject-select type="class" subject="ctrl.class.subject" model="ctrl.model" disable="!ctrl.class.inUnstableState"></editable-subject-select>
-  </div>
-</div>
+<subject-view entity="ctrl.class" model="ctrl.model" is-editing="ctrl.isEditing"></subject-view>
 
 <div class="row">
 
