--- a/src/components/editor/propertyPredicateView.html
+++ b/src/components/editor/propertyPredicateView.html
@@ -26,7 +26,8 @@
       <non-editable data-title="Predicate type" value="ctrl.predicate.normalizedType" value-as-localization-key="true" context="ctrl.model"></non-editable>
     </div>
   </div>
-  <subject-view subject="ctrl.predicate.subject" context="ctrl.model"></subject-view>
+
+  <subject-view entity="ctrl.predicate" model="ctrl.model"></subject-view>
 
 </div>
 
