--- a/src/components/editor/subjectView.html
+++ b/src/components/editor/subjectView.html
@@ -32,4 +32,10 @@
       <non-editable data-title="Definition" value="ctrl.entity.subject.comment" context="ctrl.model"></non-editable>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <non-editable data-title="Defined in vocabularies" value="ctrl.vocabularies" context="ctrl.model"></non-editable>
+    </div>
+  </div>
 </div>
