Show editable entity errors is modal
Also renames submit error panel as error panel and submitError as excludeError in search modals.

--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -99,7 +99,7 @@
             </div>
           </div>
 
-          <submit-error-panel error="ctrl.submitError"></submit-error-panel>
+          <error-panel error="ctrl.excludeError"></error-panel>
         </div>
 
       </div>
