--- a/src/components/model/searchReferenceDataModal.html
+++ b/src/components/model/searchReferenceDataModal.html
@@ -78,7 +78,7 @@
             </editable>
           </div>
 
-          <submit-error-panel error="ctrl.submitError"></submit-error-panel>
+          <error-panel error="ctrl.submitError"></error-panel>
         </div>
 
       </div>
