--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -74,7 +74,7 @@
             </div>
           </div>
 
-          <submit-error-panel error="ctrl.submitError"></submit-error-panel>
+          <error-panel error="ctrl.excludeError"></error-panel>
         </div>
       </div>
 
