--- a/src/components/model/addEditNamespaceModal.html
+++ b/src/components/model/addEditNamespaceModal.html
@@ -25,7 +25,7 @@
     </modal-body>
 
     <modal-buttons>
-      <submit-error-panel error="ctrl.submitError"></submit-error-panel>
+      <error-panel error="ctrl.submitError"></error-panel>
 
       <button class="btn btn-default cancel" type="button" ng-click="ctrl.cancel()" translate>Cancel</button>
       <button class="btn btn-default confirm" type="button" ng-click="ctrl.create()" ng-disabled="!form.$valid">{{ctrl.confirmLabel | translate}}</button>
