--- a/src/components/editor/subjectView.html
+++ b/src/components/editor/subjectView.html
@@ -1,9 +1,7 @@
 <div class="row">
-  <div class="col-md-6">
-    <h4>{{ctrl.subjectTitle + ' information' | capitalize | translate}}</h4>
-  </div>
+  <div class="col-md-12">
+    <h4 class="pull-left">{{ctrl.subjectTitle + ' information' | capitalize | translate}}</h4>
 
-  <div class="col-md-6">
     <button ng-if="ctrl.isEditing()"
             type="button"
             class="btn btn-default pull-right"
@@ -11,7 +9,6 @@
             ng-click="ctrl.changeSubject()" uib-tooltip="{{'Change concept' | translate}}"><i class="fa fa-repeat"></i></button>
   </div>
 </div>
-
 
 <div ng-if="!ctrl.entity.subject">
   <div class="row">
