Style dialong for normal, warning and danger

--- a/src/components/common/deleteConfirmationModal.html
+++ b/src/components/common/deleteConfirmationModal.html
@@ -1,4 +1,4 @@
-<modal-template default="true">
+<modal-template purpose="warning" default="true">
   <modal-title translate>Confirm delete</modal-title>
   <modal-body>
 
