--- a/src/components/common/modalTemplate.html
+++ b/src/components/common/modalTemplate.html
@@ -1,4 +1,4 @@
-<div class="modal-header modal-header-confirm">
+<div class="modal-header" ng-class="headerClass">
   <h4 class="modal-title ng-binding">
     <a type="button" title="Close" data-dismiss="modal"><i ng-click="$dismiss('cancel')" class="fa fa-times icon-arrow-right pull-right"></i></a>
     <div ng-transclude="title"></div>
