--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -912,6 +912,40 @@ ajax-loading-indicator-small {
   border-bottom: none;
 }
 
+.modal-header-confirm {
+  border-bottom: 1px solid;
+}
+
+.modal-header-normal {
+  color: white;
+  border-color: darken($brand-primary, 5%);
+  background-color: $brand-primary;
+
+  i {
+    color: white;
+  }
+}
+
+.modal-header-warning {
+  color: $alert-warning-text;
+  border-color: $alert-warning-border;
+  background-color: $alert-warning-bg;
+
+  i {
+    color: $alert-warning-text;
+  }
+}
+
+.modal-header-danger {
+  color: $alert-danger-text;
+  border-color: $alert-danger-border;
+  background-color: $alert-danger-bg;
+
+  i {
+    color: $alert-danger-text;
+  }
+}
+
 .modal-footer {
   border-top: none;
 }
