Import font-awesome from app sass file

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,6 +3,7 @@
 // Note: ~ tells webpack to look-up the modulesDirectories
 // See also: https://github.com/jtangelder/sass-loader/issues/40
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
+$fa-font-path: '~font-awesome/fonts';
 
 $gray-base:             #222;
 $gray-darker:           lighten($gray-base, 13.5%);
@@ -26,9 +27,11 @@ $brand-accent-dark:     #375e97;
 
 @import './mixin';
 @import '../vendor/variables';
-@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap';
 @import '../vendor/bootswatch';
-@import '../../node_modules/jointjs/dist/joint.css';
+@import '~jointjs/dist/joint.css';
+@import '~font-awesome/scss/font-awesome.scss';
+@import '~font-awesome/scss/_variables.scss';
 
 [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
