Rename class search-filters as search-panel

--- a/src/components/model/searchNamespaceModal.html
+++ b/src/components/model/searchNamespaceModal.html
@@ -19,7 +19,7 @@
           <i class="glyphicon glyphicon-search form-control-feedback"></i>
         </div>
 
-        <div class="search-filters">
+        <div class="search-panel">
           <span class="title" translate>Filter results</span>
           <div class="form-group">
             <div class="checkbox">
