--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -75,10 +75,11 @@ reference-data-view.popup {
   display: inline-block;
 }
 
-.search-filters {
+.search-panel {
 
   margin-right: 0;
   margin-left: 0;
+  margin-bottom: 10px;
   background-color: #fff;
   border: 1px #ddd solid;
   box-shadow: none;
