--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -20,7 +20,7 @@
             <i class="glyphicon glyphicon-search form-control-feedback"></i>
           </div>
 
-          <div class="search-filters">
+          <div class="search-panel">
             <span class="title" translate>Filter results</span>
             <div class="form-group">
               <label for="model" translate>Defined by</label>
