--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -17,7 +17,7 @@
             <i class="glyphicon glyphicon-search form-control-feedback"></i>
           </div>
 
-          <div class="search-filters">
+          <div class="search-panel">
             <span class="title" translate>Filter results</span>
             <div class="form-group">
               <label for="vocabulary" translate>Vocabulary filter</label>
