--- a/src/components/model/conceptEditorModal.html
+++ b/src/components/model/conceptEditorModal.html
@@ -16,7 +16,7 @@
           <i class="glyphicon glyphicon-search form-control-feedback"></i>
         </div>
 
-        <div class="search-filters">
+        <div class="search-panel">
           <span class="title" translate>Filter results</span>
 
           <div class="form-group">
