--- a/src/components/model/searchReferenceDataModal.html
+++ b/src/components/model/searchReferenceDataModal.html
@@ -14,7 +14,7 @@
             <i class="glyphicon glyphicon-search form-control-feedback"></i>
           </div>
 
-          <div class="search-filters">
+          <div class="search-panel">
             <span class="title" translate>Filter results</span>
 
             <div class="form-group" ng-if="!ctrl.referenceDatasFromModel">
