Same modal style as other modals

--- a/src/components/maintenance.html
+++ b/src/components/maintenance.html
@@ -1,4 +1,4 @@
-<div class="modal-header modal-header-confirm">
+<div class="modal-header modal-header-normal">
   <h4 class="modal-title ng-binding" translate>Maintenance</h4>
 </div>
 
