--- a/src/components/model/searchNamespaceModal.html
+++ b/src/components/model/searchNamespaceModal.html
@@ -33,7 +33,7 @@
         <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
         <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selected" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
-          <h5>{{searchResult | translateLabel}}</h5>
+          <h5>{{searchResult | translateLabel: ctrl.model}}</h5>
           <p>{{searchResult.namespace}}</p>
         </search-results>
       </div>
