--- a/src/components/model/searchReferenceDataModal.html
+++ b/src/components/model/searchReferenceDataModal.html
@@ -45,9 +45,9 @@
           <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
           <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selectedItem" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
-            <h5>{{searchResult.title | translateValue}}</h5>
-            <p>{{searchResult.description | translateValue}}</p>
-            <p><span ng-repeat="group in searchResult.groups">{{group.title | translateValue}}{{$last ? '' : ', '}}</span>
+            <h5>{{searchResult.title | translateValue: ctrl.model}}</h5>
+            <p>{{searchResult.description | translateValue: ctrl.model}}</p>
+            <p><span ng-repeat="group in searchResult.groups">{{group.title | translateValue: ctrl.model}}{{$last ? '' : ', '}}</span>
               <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small>
             </p>
           </search-results>
