Add model language chooser to search dialogs

--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -7,6 +7,9 @@
       <div class="row">
 
         <div class="col-md-4">
+
+          <model-language-chooser context="ctrl.model"></model-language-chooser>
+
           <p translate>Concept search info</p>
           <div class="input-group input-group-lg">
             <input autofocus type="text" class="form-control" placeholder="{{'Search from concept database' | translate}}"
