--- a/src/components/model/conceptEditorModal.html
+++ b/src/components/model/conceptEditorModal.html
@@ -8,6 +8,9 @@
     <div class="row">
 
       <div class="col-md-4">
+
+        <model-language-chooser context="ctrl.model"></model-language-chooser>
+
         <div class="input-group input-group-lg">
           <input autofocus type="text" class="form-control" placeholder="{{'search concept' | translate}}"
                  ng-model="ctrl.searchText"
