--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -10,6 +10,9 @@
       <div class="row">
 
         <div class="col-md-4">
+
+          <model-language-chooser context="ctrl.model"></model-language-chooser>
+
           <p ng-hide="ctrl.onlySelection" translate>Class search or create info</p>
           <p ng-show="ctrl.onlySelection" translate>Class search info</p>
           <div class="input-group input-group-lg">
