--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -16,6 +16,9 @@
       <div class="row">
 
         <div class="col-md-4">
+
+          <model-language-chooser context="ctrl.model"></model-language-chooser>
+
           <p ng-show="ctrl.onlySelection" translate>Search predicate info</p>
           <p ng-hide="ctrl.onlySelection" translate>Search or create predicate info</p>
           <div class="input-group input-group-lg">
