--- a/src/components/model/searchNamespaceModal.html
+++ b/src/components/model/searchNamespaceModal.html
@@ -3,6 +3,9 @@
 
   <modal-body>
     <div class="clearfix" style="margin-bottom: 15px">
+
+      <model-language-chooser context="ctrl.model" class="pull-left"></model-language-chooser>
+
       <button type="button" class="btn btn-default btn-md pull-right" ng-click="ctrl.createNew()">
         <span class="glyphicon glyphicon-plus"></span>
         {{'Add new namespace' | translate}}
