--- a/src/components/model/searchReferenceDataModal.html
+++ b/src/components/model/searchReferenceDataModal.html
@@ -6,6 +6,8 @@
       <div class="row">
         <div class="col-md-4">
 
+          <model-language-chooser context="ctrl.model"></model-language-chooser>
+
           <div class="input-group input-group-lg">
             <input autofocus type="text" class="form-control" placeholder="{{'search reference data' | translate}}"
                    ng-model="ctrl.searchText"
