Add model language chooser to front page search

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1328,6 +1328,12 @@ a.accordion-toggle {
     top: -20px;
     position: relative;
   }
+
+  model-language-chooser {
+    float: right;
+    top: -20px;
+    position: relative;
+  }
 }
 
 .panel__list {
