--- a/src/components/advancedSearchModal.html
+++ b/src/components/advancedSearchModal.html
@@ -4,6 +4,9 @@
   <modal-body>
     <div class="row">
       <div class="col-md-6">
+
+        <model-language-chooser context="ctrl.context"></model-language-chooser>
+
         <div class="input-group input-group-lg">
           <input autofocus type="text" class="form-control" placeholder="{{'search descriptions' | translate}}"
                  ng-model="ctrl.searchText"
@@ -12,8 +15,14 @@
           <i class="glyphicon glyphicon-search form-control-feedback"></i>
         </div>
 
-        <div class="checkbox" ng-repeat="type in ctrl.types">
-          <label><input class="" type="checkbox" checklist-model="ctrl.searchTypes" checklist-value="type" /> {{type | translate}}</label>
+        <div class="search-panel">
+          <span class="title" translate>Filter results</span>
+
+          <div class="input-group input-group-md">
+            <div class="checkbox" ng-repeat="type in ctrl.types">
+              <label><input class="" type="checkbox" checklist-model="ctrl.searchTypes" checklist-value="type" /> {{type | translate}}</label>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -21,8 +30,8 @@
         <div ng-show="ctrl.searchText && ctrl.searchResults.length === 0" translate>No search results</div>
         <div ng-repeat="searchResult in ctrl.searchResults track by searchResult.id"
              class="search-result" ng-click="ctrl.selectSearchResult(searchResult)" key-control-selection>
-          <div><i ng-class="searchResult.glyphIconClass"></i><h5>{{searchResult | translateLabel}}</h5></div>
-          <p>{{searchResult.comment | translateValue}}</p>
+          <div><i ng-class="searchResult.glyphIconClass"></i><h5>{{searchResult | translateLabel: ctrl.context}}</h5></div>
+          <p>{{searchResult.comment | translateValue: ctrl.context}}</p>
         </div>
       </div>
     </div>
