--- a/src/components/frontPage.html
+++ b/src/components/frontPage.html
@@ -15,14 +15,17 @@
             <i class="glyphicon glyphicon-search form-control-feedback"></i>
           </div>
 
-          <span class="advanced-search link" ng-click="ctrl.openAdvancedSearch()" translate>Advanced search</span>
+          <div style="display: inline-block; width: 100%">
+            <span class="advanced-search link" ng-click="ctrl.openAdvancedSearch()" translate>Advanced search</span>
+            <model-language-chooser ng-show="ctrl.searchResults.length > 0" context="ctrl.context"></model-language-chooser>
+          </div>
 
           <ul class="selectable-panel__list">
             <li ng-show="ctrl.searchText && ctrl.searchResults.length === 0" translate>No search results</li>
             <li ng-repeat="searchResult in ctrl.searchResults" ng-click="ctrl.selectSearchResult(searchResult)" key-control-selection>
               <i ng-class="searchResult.glyphIconClass"></i>
-              <span ng-class="{link: searchResult.iowUrl}">{{searchResult | translateLabel}}</span>
-              <p>{{searchResult.comment | translateValue}}</p>
+              <span ng-class="{link: searchResult.iowUrl}">{{searchResult | translateLabel: ctrl.context}}</span>
+              <p>{{searchResult.comment | translateValue: ctrl.context}}</p>
             </li>
           </ul>
 
