--- a/src/components/navigation/breadcrumb.html
+++ b/src/components/navigation/breadcrumb.html
@@ -1,7 +1,7 @@
 <ol class="breadcrumb">
   <li ng-repeat="path in ctrl.location" ng-class="{active: $last}">
     <i ng-class="path.glyphIconClass"></i>
-    <a ng-if="path.iowUrl && !$last" ng-href="{{path.iowUrl(true)}}">
+    <a ng-if="path.iowUrl && !$last" ng-href="{{path.iowUrl()}}">
       <span ng-if="!path.label">{{path.localizationKey | translate}}</span>
       <span ng-if="path.label">{{path | translateLabel}}</span>
     </a>
