--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -30,6 +30,7 @@
     <div class="model-panel--right">
       <class-view ng-if="ctrl.selection.isClass()"
                   class="ctrl.selection"
+                  open-property-id="ctrl.openPropertyId"
                   model="ctrl.model"
                   model-controller="ctrl"
                   show="ctrl.show"
