--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -29,7 +29,7 @@
 
 <div class="row">
   <div class="col-md-6">
-    <editable data-title="{{ctrl.predicate.normalizedType + ' id' | capitalize}}" context="ctrl.model">
+    <editable data-title="{{ctrl.predicate.normalizedType + ' id' | capitalize}}" link="ctrl.linkToIdProperty()" context="ctrl.model">
       <input id="predicateId" class="form-control" type="text" required id-input="predicate" old="ctrl.oldPredicate" ng-model="ctrl.predicate.id" ng-disabled="!ctrl.predicate.inUnstableState" />
     </editable>
 
