--- a/src/components/model/addEditNamespaceModal.html
+++ b/src/components/model/addEditNamespaceModal.html
@@ -4,19 +4,19 @@
 
     <modal-body>
 
-      <editable data-title="Namespace label" disable="!ctrl.labelModifiable" context="ctrl.model">
+      <editable data-title="Namespace label" disable="!ctrl.labelModifiable()" context="ctrl.model">
         <div class="input-group input-group-md">
           <input id="label" type="text" class="form-control" autofocus required string-input="modelLabel" ng-model="ctrl.label" />
         </div>
       </editable>
 
-      <editable data-title="Namespace" disable="!ctrl.namespaceModifiable" context="ctrl.model">
+      <editable data-title="Namespace" disable="!ctrl.namespaceModifiable()" context="ctrl.model">
         <div class="input-group input-group-md">
           <input id="namespace" type="text" class="form-control" required namespace-input model="ctrl.model" ng-model="ctrl.namespace" active-namespace="ctrl.namespaceToEdit" />
         </div>
       </editable>
 
-      <editable data-title="Prefix" disable="!ctrl.prefixModifiable" context="ctrl.model">
+      <editable data-title="Prefix" disable="!ctrl.prefixModifiable()" context="ctrl.model">
         <div class="input-group input-group-md">
           <input id="prefix" type="text" class="form-control" required prefix-input model="ctrl.model" ng-model="ctrl.prefix" active-namespace="ctrl.namespaceToEdit" />
         </div>
