--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -850,7 +850,7 @@ modal-body {
 visualization-view ajax-loading-indicator {
   display: inline-block;
   position: relative;
-  top: 50%;
+  top: 0;
 }
 
 .search-results ajax-loading-indicator {
