Visualization classes navigable by clicking
Closes #502

--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -53,6 +53,7 @@
                           show="ctrl.show"
                           ng-style="ctrl.styleForVisualization()"
                           ng-class="ctrl.classForVisualization()"
+                          select-class-by-id="ctrl.selectClassById"
                           change-notifier="ctrl"></visualization-view>
     </div>
   </div>
