--- a/src/components/editor/propertyPredicateView.html
+++ b/src/components/editor/propertyPredicateView.html
@@ -1,11 +1,10 @@
 <div ng-if="ctrl.predicate">
 
   <div class="row">
-    <div class="col-md-6">
-      <h4 translate>Reusable predicate information</h4>
-    </div>
+    <div class="col-md-12">
+      <h4 class="pull-left" translate>Reusable predicate information</h4>
 
-    <div class="col-md-6">
+
       <button ng-if="ctrl.isEditing()"
               type="button"
               class="btn btn-default pull-right"
