Link to predicate

--- a/src/components/editor/propertyPredicateView.html
+++ b/src/components/editor/propertyPredicateView.html
@@ -16,7 +16,7 @@
   <div class="row">
     <div class="col-md-6">
       <non-editable data-title="{{ctrl.predicate.normalizedType + ' label' | capitalize}}" value="ctrl.predicate.label" context="ctrl.model"></non-editable>
-      <non-editable data-title="{{ctrl.predicate.normalizedType + ' id' | capitalize}}" value="ctrl.predicate.id" context="ctrl.model"></non-editable>
+      <non-editable data-title="{{ctrl.predicate.normalizedType + ' id' | capitalize}}" value="ctrl.predicate.id" link="ctrl.linkToId()" context="ctrl.model"></non-editable>
       <non-editable data-title="Range" value="ctrl.predicate.range" context="ctrl.model"></non-editable>
     </div>
     <div class="col-md-6">
