--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -37,41 +37,41 @@
 <subject-view entity="ctrl.class" model="ctrl.model" is-editing="ctrl.isEditing"></subject-view>
 
 <div class="row">
-
   <div class="col-md-12">
-    <div ng-show="ctrl.class.properties.length > 0">
-      <div class="clearfix">
-        <h4 class="pull-left" style="margin-bottom: 0">{{ctrl.class.normalizedType + ' properties' | capitalize | translate}}</h4>
-        <button type="button" class="btn btn-default pull-right" ng-click="ctrl.addProperty()" ng-show="ctrl.isEditing()" uib-tooltip="{{'Add property' | translate}}">
-          <span class="glyphicon glyphicon-plus"></span>
-        </button>
-      </div>
 
-      <accordion open-id="ctrl.openPropertyId" drag-sortable="ctrl.class.properties" drag-disabled="!ctrl.isEditing()" on-reorder="ctrl.onPropertyReorder">
-        <accordion-group ng-repeat="property in ctrl.class.properties track by property.internalId" identifier="property.internalId.uuid">
-          <accordion-heading>
-            <div class="panel-heading" drag-sortable-item>
-              <h4 class="panel-title">
-                <a ng-class="{collapsed: !isOpen()}">
-                  <span class="accordion-icon" ng-class="property.glyphIconClass"></span>
-                  <span>{{property | translateLabel: ctrl.model}}</span>
-                  <accordion-chevron is-open="isOpen()"></accordion-chevron>
-                  <div class="property-ordering" ng-show="ctrl.isEditing()">
-                    <span class="fa fa-bars"></span>
-                  </div>
-                </a>
-              </h4>
-            </div>
-          </accordion-heading>
-
-          <accordion-body>
-            <property-view property="property" class="ctrl.class" model="ctrl.model"></property-view>
-          </accordion-body>
-        </div>
-      </accordion>
+    <div class="clearfix">
+      <h4 class="pull-left" style="margin-bottom: 0">{{ctrl.class.normalizedType + ' properties' | capitalize | translate}}</h4>
+      <button type="button" class="btn btn-default pull-right" ng-click="ctrl.addProperty()" ng-show="ctrl.isEditing()" uib-tooltip="{{'Add property' | translate}}">
+        <span class="glyphicon glyphicon-plus"></span>
+      </button>
     </div>
-  </div>
 
+    <accordion ng-if="ctrl.class.properties.length > 0" open-id="ctrl.openPropertyId" drag-sortable="ctrl.class.properties" drag-disabled="!ctrl.isEditing()" on-reorder="ctrl.onPropertyReorder">
+      <accordion-group ng-repeat="property in ctrl.class.properties track by property.internalId" identifier="property.internalId.uuid">
+        <accordion-heading>
+          <div class="panel-heading" drag-sortable-item>
+            <h4 class="panel-title">
+              <a ng-class="{collapsed: !isOpen()}">
+                <span class="accordion-icon" ng-class="property.glyphIconClass"></span>
+                <span>{{property | translateLabel: ctrl.model}}</span>
+                <accordion-chevron is-open="isOpen()"></accordion-chevron>
+                <div class="property-ordering" ng-show="ctrl.isEditing()">
+                  <span class="fa fa-bars"></span>
+                </div>
+              </a>
+            </h4>
+          </div>
+        </accordion-heading>
+
+        <accordion-body>
+          <property-view property="property" class="ctrl.class" model="ctrl.model"></property-view>
+        </accordion-body>
+      </accordion-group>
+    </accordion>
+
+    <span ng-show="ctrl.class.properties.length === 0" translate>No properties yet</span>
+
+  </div>
 </div>
 
 
