--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -34,7 +34,13 @@
       </editable-multiple-language-select>
 
       <editable ng-if="ctrl.property.isAssociation()" data-title="Value class" link="ctrl.linkToValueClass()" context="ctrl.model">
-        <uri-select id="{{ctrl.property.internalId + 'valueClass'}}" type="class" uri="ctrl.property.valueClass" mandatory="!ctrl.property.inUnstableState" duplicate="ctrl.isConflictingValueClass" model="ctrl.model"></uri-select>
+        <uri-select id="{{ctrl.property.internalId + 'valueClass'}}"
+                    type="class" uri="ctrl.property.valueClass"
+                    mandatory="!ctrl.property.inUnstableState"
+                    duplicate="ctrl.isConflictingValueClass"
+                    model="ctrl.model"
+                    default-to-current-model="true">
+        </uri-select>
       </editable>
     </div>
 
