--- a/src/components/editor/selectionView.html
+++ b/src/components/editor/selectionView.html
@@ -9,7 +9,7 @@
   </div>
 
   <div ng-hide="ctrl.show === 2">
-    <div float="top-actions-placeholder" class="top-actions-placeholder">
+    <div float="top-actions-placeholder">
       <editable-entity-buttons context="ctrl.model" editable-controller="ctrl.editableController">
         <div ng-transclude="buttons"></div>
       </editable-entity-buttons>
